Fix a layout bug
When using the app on an iPhone, the bottom part of the featured match
is often obscured.  Which is a shame because that portrait totally looked
just like the Mrs.

This glitch manifested because of a maximum-height for a layout block
that collaposes from horizontal to vertical stacking at small window
widths. We can safely stash that max-height declaration in a media-query
with a min-width and we should be golden.

DISCLAIMER: I haven't actually tested this but it looks plausible

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,8 +31,13 @@ a:hover {
 }
 
 #uploaded-photo {
-  max-height: 500px;
   margin-bottom: 100px;
+}
+
+@media only screen and (min-width: 576px) {
+  #uploaded-photo {
+    max-height: 500px;
+  }
 }
 
 h2 {
